Додав адаптив до секцій

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Web Studio</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -22,7 +23,7 @@
   <body>
     <!-- Header -->
     <header class="page-header">
-      <div class="header-container header-container--display">
+      <div class="container header-container--display">
         <a
           href="https://borschvs.github.io/goit-markup-hw-06/"
           class="page-header__logo logo"
@@ -32,7 +33,7 @@
         >
 
         <!-- Navigation -->
-        <nav class="main-nav">
+        <nav class="main-nav visually-hidden">
           <ul class="site-nav list">
             <li class="site-nav__item">
               <a
@@ -55,7 +56,7 @@
             </li>
           </ul>
         </nav>
-        <ul class="contacts list">
+        <ul class="contacts list visually-hidden">
           <li class="contacts__item">
             <a href="mailto:info@devstudio.com" class="contacts__link"
               ><svg class="icon-post" width="16" height="12">
