--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <!-- Header -->
     <header class="page-header">
-      <div class="container header-container--display">
+      <div class="container container--display">
         <a
           href="https://borschvs.github.io/goit-markup-hw-06/"
           class="page-header__logo logo"
@@ -33,8 +33,14 @@
         >
 
         <!-- Navigation -->
-        <nav class="main-nav visually-hidden">
-          <ul class="site-nav list">
+        <nav class="main-nav">
+          <button type="button" class="menu-button is-open">
+            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
+              <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu"></use>
+              <use class="icon-close" href="./images/symbol-defs.svg#icon-mobile-close"></use>
+            </svg>
+          </button>
+          <ul class="site-nav visually-hidden">
             <li class="site-nav__item">
               <a
                 href="./index.html"
@@ -92,9 +98,9 @@
       <section class="feauture-section">
         <div class="feauture container">
           <h2 class="visually-hidden">Наші переваги</h2>
-          <ul class="feauture-list list">
+          <ul class="feauture-list">
             <li class="feauture-list__item">
-              <div class="icon-container feauture-box">
+              <div class="feauture-box">
                 <svg class="feature-box__icon">
                   <use href="./images/symbol-defs.svg#icon-antenna"></use>
                 </svg>
@@ -106,30 +112,30 @@
               </p>
             </li>
             <li class="feauture-list__item">
-              <div class="icon-container feauture-box">
+              <div class="feauture-box">
                 <svg class="feature-box__icon">
                   <use href="./images/symbol-defs.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="feauture-box__subtitle">ПУНКТУАЛЬНІСТЬ</h3>
-              <p class="feauture-text">
+              <p class="feauture-box__text">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
             <li class="feauture-list__item">
-              <div class="icon-container feauture-box">
+              <div class="feauture-box">
                 <svg class="feature-box__icon">
                   <use href="./images/symbol-defs.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="feauture-box__subtitle">ПЛАНУВАННЯ</h3>
-              <p class="feauture-text">
+              <p class="feauture-box__text">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="feauture-list__item">
-              <div class="icon-container feauture-box">
+              <div class="feauture-box">
                 <svg class="feature-box__icon">
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
@@ -137,7 +143,7 @@
               <h3 class="feauture-box__subtitle">
                 СУЧАСНІ ТЕХНОЛОГІЇ
               </h3>
-              <p class="feauture-text">
+              <p class="feauture-box__text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
