--- a/index.html
+++ b/index.html
@@ -23,63 +23,86 @@
   <body>
     <!-- Header -->
     <header class="page-header">
-      <div class="container container--display">
-        <a
+      <div class="container">
+        <!-- Navigation -->
+        <nav class="main-nav">
+          <a
           href="https://borschvs.github.io/goit-markup-hw-06/"
           class="page-header__logo logo"
           rel="noopener"
           target="_blank"
           >Web<span class="page-header__logo--color">Studio</span></a
         >
-
-        <!-- Navigation -->
-        <nav class="main-nav">
-          <button type="button" class="menu-button is-open">
-            <svg width="40" height="40" aria-label="Переключатель мобильного меню">
-              <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu"></use>
-              <use class="icon-close" href="./images/symbol-defs.svg#icon-mobile-close"></use>
+          <button
+            type="button"
+            class="menu-button is-open"
+            data-menu-button
+            aria-expanded="false"
+            aria-controls="mobile-menu"
+          >
+            <svg
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                class="icon-cross"
+                href="./images/symbol-defs.svg#cross"
+              ></use>
+              <use class="icon-menu" href="./images/symbol-defs.svg#menu"></use>
             </svg>
           </button>
-          <ul class="site-nav visually-hidden">
-            <li class="site-nav__item">
-              <a
-                href="./index.html"
-                class="site-nav__link site-nav__link--visit"
-                >Студія</a
-              >
-            </li>
-            <li class="site-nav__item">
-              <a
-                href="./portfolio.html"
-                class="site-nav__link"
-                target="_self"
-                rel="nofollow"
-                >Портфоліо</a
-              >
-            </li>
-            <li class="item">
-              <a href="#" class="site-nav__link">Контакти</a>
-            </li>
-          </ul>
+          <div class="menu-container is-open" id="menu-container" aria-expanded="false" data-menu>
+            
+            <ul class="site-nav">
+              <li class="site-nav__item">
+                <a
+                  href="./index.html"
+                  class="site-nav__link site-nav__link--visit"
+                  >Студія</a
+                >
+              </li>
+              <li class="site-nav__item">
+                <a
+                  href="./portfolio.html"
+                  class="site-nav__link"
+                  target="_self"
+                  rel="nofollow"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Контакти</a>
+              </li>
+            </ul>
+
+            <ul class="contacts">
+              <li class="contacts__item">
+                <a href="mailto:info@devstudio.com" class="contacts__link"
+                  ><svg class="icon-post" width="16" height="12">
+                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="contacts__item">
+                <a href="tel:+380961111111" class="contacts__link"
+                  ><svg class="icon-phone" width="10" height="16">
+                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+
+            <ul class="media-list">
+              <li class="media-list__item"><a href="" class="media-list__link">Instagram</a></li>
+              <li class="media-list__item"><a href="" class="media-list__link">Twitter</a></li>
+              <li class="media-list__item"><a href="" class="media-list__link">Facebook</a></li>
+              <li class="media-list__item"><a href="" class="media-list__link">LinkedIn</a></li>
+            </ul>
+          </div>
         </nav>
-        <ul class="contacts list visually-hidden">
-          <li class="contacts__item">
-            <a href="mailto:info@devstudio.com" class="contacts__link"
-              ><svg class="icon-post" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="contacts__item">
-            <a href="tel:+380961111111" class="contacts__link"
-              ><svg class="icon-phone" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11
-            </a>
-          </li>
-        </ul>
       </div>
     </header>
 
@@ -140,9 +163,7 @@
                   <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="feauture-box__subtitle">
-                СУЧАСНІ ТЕХНОЛОГІЇ
-              </h3>
+              <h3 class="feauture-box__subtitle">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
               <p class="feauture-box__text">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
@@ -155,9 +176,7 @@
       <!-- About us -->
       <section class="section-about">
         <div class="about container">
-          <h2 class="about__title">
-            Чим ми займаємося
-          </h2>
+          <h2 class="about__title">Чим ми займаємося</h2>
           <ul class="about-list list">
             <li class="about-list__item">
               <div class="about-thumb">
@@ -362,7 +381,7 @@
               <div class="team-box">
                 <h3 class="team-box__subtitle">Михайло Єрмаков</h3>
                 <p class="team-box__text">UI Designer</p>
-                 <ul class="social-list">
+                <ul class="social-list">
                   <li class="social-list__item">
                     <a class="social-list__link" href="#">
                       <svg class="social-list__icon">
@@ -419,54 +438,42 @@
             <li class="partner-list__item">
               <a class="partner-list__link" href="#">
                 <svg class="partner-list__icon" width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-ya-co"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-ya-co"></use>
                 </svg>
               </a>
             </li>
             <li class="partner-list__item">
               <a class="partner-list__link" href="#">
                 <svg class="partner-list__icon" width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-tagline-here"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-tagline-here"></use>
                 </svg>
               </a>
             </li>
             <li class="partner-list__item">
               <a class="partner-list__link" href="#">
                 <svg class="partner-list__icon" width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-company"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-company"></use>
                 </svg>
               </a>
             </li>
             <li class="partner-list__item">
               <a class="partner-list__link" href="#">
                 <svg class="partner-list__icon" width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-foster-peters"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-foster-peters"></use>
                 </svg>
               </a>
             </li>
             <li class="partner-list__item">
               <a class="partner-list__link" href="#">
                 <svg class="partner-list__icon" width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-brand"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="partner-list__item">
               <a class="partner-list__link" href="#">
                 <svg class="partner-list__icon" width="106" height="60">
-                  <use
-                    href="./images/symbol-defs.svg#icon-tag-line"
-                  ></use>
+                  <use href="./images/symbol-defs.svg#icon-tag-line"></use>
                 </svg>
               </a>
             </li>
@@ -627,7 +634,7 @@
           <label class="form-field">
             <span class="label">Коментар</span>
             <textarea
-            class="textarea"
+              class="textarea"
               name="comment"
               rows="3"
               placeholder="Введіть текст"
@@ -650,6 +657,6 @@
     </div>
 
     <script src="./js/modal.js"></script>
-
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
