--- a/index.html
+++ b/index.html
@@ -35,12 +35,13 @@
         >
           <button
             type="button"
-            class="menu-button is-open"
+            class="menu-button"
             data-menu-button
-            aria-expanded="false"
+            aria-expanded="true"
             aria-controls="mobile-menu"
           >
             <svg
+            class="menu-button__icon"
               width="40"
               height="40"
               aria-label="Переключатель мобильного меню"
@@ -52,7 +53,7 @@
               <use class="icon-menu" href="./images/symbol-defs.svg#menu"></use>
             </svg>
           </button>
-          <div class="menu-container is-open" id="menu-container" aria-expanded="false" data-menu>
+          <div class="menu-container" id="menu-container" aria-expanded="false" data-menu>
             
             <ul class="site-nav">
               <li class="site-nav__item">
