--- a/portfolio.html
+++ b/portfolio.html
@@ -22,53 +22,87 @@
   <body>
     <!-- Header -->
     <header class="page-header">
-      <div class="header-container header-container--display">
-        <a
+      <div class="container">
+        <!-- Navigation -->
+        <nav class="main-nav">
+          <a
           href="https://borschvs.github.io/goit-markup-hw-06/"
           class="page-header__logo logo"
           rel="noopener"
           target="_blank"
           >Web<span class="page-header__logo--color">Studio</span></a
         >
+          <button
+            type="button"
+            class="menu-button"
+            data-menu-button
+            aria-expanded="true"
+            aria-controls="mobile-menu"
+          >
+            <svg
+            class="menu-button__icon"
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню"
+            >
+              <use
+                class="icon-cross"
+                href="./images/symbol-defs.svg#cross"
+              ></use>
+              <use class="icon-menu" href="./images/symbol-defs.svg#menu"></use>
+            </svg>
+          </button>
+          <div class="menu-container" id="menu-container" aria-expanded="false" data-menu>
+            
+            <ul class="site-nav">
+              <li class="site-nav__item">
+                <a
+                  href="./index.html"
+                  class="site-nav__link"
+                  >Студія</a
+                >
+              </li>
+              <li class="site-nav__item">
+                <a
+                  href="./portfolio.html"
+                  class="site-nav__link site-nav__link--visit"
+                  target="_self"
+                  rel="nofollow"
+                  >Портфоліо</a
+                >
+              </li>
+              <li class="site-nav__item">
+                <a href="#" class="site-nav__link">Контакти</a>
+              </li>
+            </ul>
 
-        <!-- Navigation -->
-        <nav class="main-nav">
-          <ul class="site-nav list">
-            <li class="site-nav__item">
-              <a href="./index.html" class="site-nav__link">Студія</a>
-            </li>
-            <li class="site-nav__item">
-              <a
-                href="./portfolio.html"
-                class="site-nav__link site-nav__link--visit"
-                target="_self"
-                rel="nofollow"
-                >Портфоліо</a
-              >
-            </li>
-            <li class="item">
-              <a href="#" class="site-nav__link">Контакти</a>
-            </li>
-          </ul>
+            <ul class="contacts">
+              <li class="contacts__item">
+                <a href="mailto:info@devstudio.com" class="contacts__link"
+                  ><svg class="icon-post" width="16" height="12">
+                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li class="contacts__item">
+                <a href="tel:+380961111111" class="contacts__link"
+                  ><svg class="icon-phone" width="10" height="16">
+                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                  </svg>
+                  +38 096 111 11 11
+                </a>
+              </li>
+            </ul>
+
+            <ul class="media-list">
+              <li class="media-list__item"><a href="" class="media-list__link">Instagram</a></li>
+              <li class="media-list__item"><a href="" class="media-list__link">Twitter</a></li>
+              <li class="media-list__item"><a href="" class="media-list__link">Facebook</a></li>
+              <li class="media-list__item"><a href="" class="media-list__link">LinkedIn</a></li>
+            </ul>
+          </div>
         </nav>
-        <ul class="contacts list">
-          <li class="contacts__item">
-            <a href="mailto:info@devstudio.com" class="contacts__link"
-              ><svg class="icon-post" width="16" height="12">
-                <use href="./images/symbol-defs.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="contacts__item">
-            <a href="tel:+380961111111" class="contacts__link"
-              ><svg class="icon-phone" width="10" height="16">
-                <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11
-            </a>
-          </li>
-        </ul>
       </div>
     </header>
     <!-- Main section -->
@@ -387,5 +421,6 @@
         </form>
       </div>
     </footer>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
