додав зображення для ретіни у team

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <h2 class="team__title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-list__item">
-              <img src="images/pd.jpg" alt="Веселий чоловік" width="270" />
+              <img srcset="./images/team/pd.jpg 1x, ./images/team/pd@2x.jpg 2x" src="images/team/pd.jpg" alt="Веселий чоловік" width="270" />
               <div class="team-box">
                 <h3 class="team-box__subtitle">Ігор Дем'яненко</h3>
                 <p class="team-box__text">Product Designer</p>
@@ -273,7 +273,7 @@
             </li>
             <li class="team-list__item">
               <img
-                src="images/frontender.jpg"
+                src="images/team/frontender.jpg"
                 alt="Усміхнена дівчина"
                 width="270"
               />
@@ -326,7 +326,7 @@
             </li>
             <li class="team-list__item">
               <img
-                src="images/marketolog.jpg"
+                src="images/team/marketolog.jpg"
                 alt="Усміхнений чоловік"
                 width="270"
               />
@@ -378,7 +378,7 @@
               </div>
             </li>
             <li class="team-list__item">
-              <img src="images/ui.jpg" alt="Впевнений чоловік" width="270" />
+              <img src="images/team/ui.jpg" alt="Впевнений чоловік" width="270" />
               <div class="team-box">
                 <h3 class="team-box__subtitle">Михайло Єрмаков</h3>
                 <p class="team-box__text">UI Designer</p>
